specs/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: water
  name: water
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      run: water
  template:
    metadata:
      labels:
        run: water
    spec:
      containers:
      - image: gcr.io/cloud-project-1-182204/water:0.0.1
        name: service
        ports:
        - containerPort: 8080
          protocol: TCP
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: water-notifications
  name: water-notifications
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      run: water-notifications
  template:
    metadata:
      labels:
        run: water-notifications
    spec:
      containers:
      - image: gcr.io/cloud-project-1-182204/water-notifications:0.0.1
        name: service
        ports:
        - containerPort: 8080
          protocol: TCP
