specs/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: water
  name: water
  namespace: project
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: water
  type: NodePort
